# raftkit-mini

./: .gitignore  Cargo.toml  README.md
data/node-1/: db
data/node-2/: snap.00000000000000E8
data/node-3/: db
src/: api.rs  main.rs  network.rs  store.rs  types.rs
