[package]
name = "raftkit-mini"
version = "0.1.0"
edition = "2024"

[dependencies]
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
sled = "0.34"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"
